--- a/src/main/resources/time_calculator.fxml
+++ b/src/main/resources/time_calculator.fxml
@@ -32,6 +32,8 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -42,8 +44,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane dividerPositions="0.2505567928730512" focusTraversable="true" layoutX="120.0" prefHeight="-1.0" prefWidth="-1.0">
@@ -69,7 +69,7 @@
                         </TextField>
                         <Button fx:id="resetButton" layoutX="14.0" layoutY="100.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="79.0" text="RESET" />
                         <Button fx:id="plusButton" layoutX="111.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="+" />
-                        <Button fx:id="minusButton" layoutX="187.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="-" />
+                        <Button fx:id="minusButton" layoutX="175.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="-" />
                         <Button fx:id="button1" layoutX="34.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="1" />
                         <Button fx:id="button2" layoutX="139.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="2" />
                         <Button fx:id="button3" layoutX="242.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="3" />
@@ -85,7 +85,7 @@
                               <Font size="23.0" />
                            </font>
                         </Button>
-                        <Button fx:id="buttonEval" layoutX="350.0" layoutY="389.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="=">
+                        <Button fx:id="buttonEval" layoutX="350.0" layoutY="460.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="=">
                            <font>
                               <Font size="23.0" />
                            </font>
@@ -110,15 +110,15 @@
                               <Font size="25.0" />
                            </font>
                         </TextField>
-                        <Button fx:id="openMarkButton" layoutX="268.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="(" />
-                        <Button fx:id="closeMarkButton" layoutX="350.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text=")" />
-                        <Button fx:id="lastValueButton" layoutX="350.0" layoutY="324.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="ANS">
+                        <Button fx:id="openMarkButton" layoutX="350.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="(" />
+                        <Button fx:id="closeMarkButton" layoutX="350.0" layoutY="168.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text=")" />
+                        <Button fx:id="lastValueButton" layoutX="350.0" layoutY="389.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="ANS">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="rightButton" layoutX="350.0" layoutY="168.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="=&gt;" />
-                        <Button fx:id="leftButton" layoutX="350.0" layoutY="237.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="&lt;=" />
+                        <Button fx:id="rightButton" layoutX="350.0" layoutY="237.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="=&gt;" />
+                        <Button fx:id="leftButton" layoutX="350.0" layoutY="309.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="&lt;=" />
                         <ChoiceBox fx:id="resultChoice" layoutX="27.0" layoutY="542.0" prefHeight="39.0" prefWidth="373.0">
                            <items>
                               <FXCollections fx:factory="observableArrayList">
@@ -131,6 +131,7 @@
                               </FXCollections>
                            </items>
                         </ChoiceBox>
+                        <Button fx:id="spaceButton" layoutX="243.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="91.0" text="Space" />
                      </children>
                   </AnchorPane>
                </content>
