--- a/src/main/resources/converter.fxml
+++ b/src/main/resources/converter.fxml
@@ -32,19 +32,34 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ChoiceBox fx:id="unitChoice" layoutX="277.0" layoutY="278.0" prefHeight="40.0" prefWidth="347.0" />
+      <ChoiceBox fx:id="unitChoice" layoutX="277.0" layoutY="278.0" prefHeight="40.0" prefWidth="347.0">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="Currency" />
+               <String fx:value="Energy" />
+               <String fx:value="Length" />
+               <String fx:value="Mass" />
+               <String fx:value="Temperature" />
+               <String fx:value="Time" />
+            </FXCollections>
+         </items>
+      </ChoiceBox>
       <ChoiceBox fx:id="fromChoice" layoutX="279.0" layoutY="353.0" prefHeight="40.0" prefWidth="169.0" />
       <ChoiceBox fx:id="toChoice" layoutX="453.0" layoutY="353.0" prefHeight="40.0" prefWidth="169.0" />
       <Text layoutX="277.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="From:" wrappingWidth="57.119998931884766" />
       <Text layoutX="453.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To:" wrappingWidth="57.119998931884766" />
       <TextField fx:id="inputTextField" layoutX="277.0" layoutY="227.0" prefHeight="40.0" prefWidth="347.0" />
-      <TextField fx:id="outputTextField" layoutX="277.0" layoutY="405.0" prefHeight="40.0" prefWidth="347.0" />
+      <TextField fx:id="outputTextField" layoutX="277.0" layoutY="454.0" prefHeight="40.0" prefWidth="347.0" />
+      <Button fx:id="convertButton" layoutX="279.0" layoutY="402.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="347.0" text="Convert" />
    </children>
 </AnchorPane>
