Fix history + radix 1

--- a/src/main/resources/main_calculator.fxml
+++ b/src/main/resources/main_calculator.fxml
@@ -36,7 +36,7 @@
                         <Button fx:id="plusButton" layoutX="111.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="+" />
                         <Button fx:id="minusButton" layoutX="187.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="-" />
                         <Button fx:id="divButton" layoutX="263.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="/" />
-                        <Button fx:id="multiplyButton" layoutX="338.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="X" />
+                        <Button fx:id="multiplyButton" layoutX="338.0" layoutY="101.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="*" />
                         <Button fx:id="button1" layoutX="34.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="1" />
                         <Button fx:id="button2" layoutX="139.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="2" />
                         <Button fx:id="button3" layoutX="242.0" layoutY="168.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="3" />
