--- a/src/main/resources/decimalConfig.fxml
+++ b/src/main/resources/decimalConfig.fxml
@@ -32,40 +32,22 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox fx:id="mainWindow" prefHeight="699.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuController">
-  <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem fx:id="saveButton" mnemonicParsing="false" text="Save" />
-                  <MenuItem fx:id="autoSaveButton" mnemonicParsing="false" text="Auto-Save" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Options">
-               <items>
-                  <Menu mnemonicParsing="false" text="Mode">
-                    <items>
-                        <MenuItem fx:id="decimalButton" mnemonicParsing="false" text="Decimal" />
-                        <MenuItem fx:id="integerButton" mnemonicParsing="false" text="Integer" />
-                        <MenuItem fx:id="timeButton" mnemonicParsing="false" text="Time" />
-                    </items>
-                  </Menu>
-               </items>
-        </Menu>
-            <Menu mnemonicParsing="false" text="Converter">
-              <items>
-                <MenuItem fx:id="runConverterButton" mnemonicParsing="false" text="Run" />
-              </items>
-            </Menu>
-      </menus>
-    </MenuBar>
-  <AnchorPane fx:id="mainContent" />
-  </children>
-</VBox>
+<AnchorPane fx:id="mainContent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextField fx:id="inputTextField" layoutX="277.0" layoutY="246.0" prefHeight="40.0" prefWidth="347.0" promptText="Input precision [0, 20]" />
+      <Button fx:id="runButton" layoutX="277.0" layoutY="384.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="347.0" text="Run" />
+      <Text layoutX="379.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please configure radix" wrappingWidth="143.73672485351562">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="roundingChoiceBox" layoutX="277.0" layoutY="311.0" prefHeight="40.0" prefWidth="347.0" />
+   </children>
+</AnchorPane>
