--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -45,7 +45,8 @@
         <Menu mnemonicParsing="false" text="File">
           <items>
             <MenuItem fx:id="saveButton" mnemonicParsing="false" text="Save" />
-                  <MenuItem fx:id="autoSaveButton" mnemonicParsing="false" text="Auto-Save" />
+                  <MenuItem fx:id="loadButton" mnemonicParsing="false" text="Load" />
+                  <MenuItem fx:id="autoSaveButton" mnemonicParsing="false" text="Export" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Options">
