--- a/src/main/resources/main_calculator.fxml
+++ b/src/main/resources/main_calculator.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="671.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane dividerPositions="0.25" focusTraversable="true" prefHeight="670.0" prefWidth="730.0">
          <items>
@@ -107,8 +107,8 @@
             </ScrollPane>
          </items>
       </SplitPane>
-      <Label fx:id="inputRadixLabel" layoutX="755.0" layoutY="14.0" prefHeight="20.0" prefWidth="110.0" text="Input radix : " visible="false" />
-      <Label fx:id="outputRadixLabel" layoutX="755.0" layoutY="44.0" prefHeight="18.0" prefWidth="110.0" text="Output radix : " visible="false" />
+      <Label fx:id="inputRadixLabel" layoutX="755.0" layoutY="14.0" prefHeight="20.0" prefWidth="110.0" visible="false" />
+      <Label fx:id="outputRadixLabel" layoutX="755.0" layoutY="44.0" prefHeight="18.0" prefWidth="110.0" visible="false" />
       <Button fx:id="undoButton" layoutX="744.0" layoutY="163.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="69.0" text="Undo" />
       <Button fx:id="redoButton" layoutX="816.0" layoutY="162.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="69.0" text="Redo" />
       <Button fx:id="loadButton" layoutX="744.0" layoutY="233.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="141.0" text="Load " />
