--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -38,35 +38,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="mainWindow" prefHeight="699.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuController">
-  <children>
+<VBox fx:id="mainWindow" prefHeight="699.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MenuController">
     <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem fx:id="saveButton" mnemonicParsing="false" text="Save" />
-                  <MenuItem fx:id="loadButton" mnemonicParsing="false" text="Load" />
-                  <MenuItem fx:id="autoSaveButton" mnemonicParsing="false" text="Export" />
-          </items>
-        </Menu>
         <Menu mnemonicParsing="false" text="Options">
-               <items>
-                  <Menu mnemonicParsing="false" text="Mode">
-                    <items>
-                        <MenuItem fx:id="decimalButton" mnemonicParsing="false" text="Decimal" />
-                        <MenuItem fx:id="integerButton" mnemonicParsing="false" text="Integer" />
-                        <MenuItem fx:id="timeButton" mnemonicParsing="false" text="Time" />
-                    </items>
-                  </Menu>
-               </items>
-        </Menu>
-            <Menu mnemonicParsing="false" text="Converter">
-              <items>
-                <MenuItem fx:id="runConverterButton" mnemonicParsing="false" text="Run" />
-              </items>
+            <Menu mnemonicParsing="false" text="Mode">
+                <MenuItem fx:id="decimalButton" mnemonicParsing="false" text="Decimal"/>
+                <MenuItem fx:id="integerButton" mnemonicParsing="false" text="Integer"/>
+                <MenuItem fx:id="timeButton" mnemonicParsing="false" text="Time"/>
             </Menu>
-      </menus>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Converter">
+            <MenuItem fx:id="runConverterButton" mnemonicParsing="false" text="Run"/>
+        </Menu>
     </MenuBar>
-  <AnchorPane fx:id="mainContent" />
-  </children>
+    <AnchorPane fx:id="mainContent"/>
 </VBox>
